# src/main/java/de/pikerando/backend/item/dataaccess/repo/api/ItemRepository.java
@@ -17,4 +17,6 @@ public interface ItemRepository extends PanacheRepository<Item> {
 
   List<Item> findeByGroupOrderId(Long grouporderid);
 
+  public void deleteItem(Long itemId);
+
 }
