# src/main/java/de/pikerando/backend/item/logic/api/ItemMangment.java
@@ -2,7 +2,7 @@ package de.pikerando.backend.item.logic.api;
 
 import java.util.List;
 
-import de.pikerando.backend.grouporder.sevice.model.ItemTo;
+import de.pikerando.backend.general.sevice.model.ItemTo;
 
 /**
  * TODO ykharita This type ...
@@ -11,6 +11,8 @@ import de.pikerando.backend.grouporder.sevice.model.ItemTo;
 
 public interface ItemMangment {
   public void createItem(Long groupOrderId, ItemTo itemTo);
+
+  public void deleteItem(Long itemId);
 
   public List<ItemTo> listItemsOfGroupOrder(Long groupOrderId);
 }
