# src/main/java/de/pikerando/backend/item/service/api/ItemGroupOrderService.java
@@ -2,7 +2,7 @@ package de.pikerando.backend.item.service.api;
 
 import java.util.List;
 
-import de.pikerando.backend.grouporder.sevice.model.ItemTo;
+import de.pikerando.backend.general.sevice.model.ItemTo;
 
 /**
  * TODO ykharita This type ...
@@ -14,5 +14,7 @@ public interface ItemGroupOrderService {
   public void createItem(Long groupOrderId, ItemTo itemTo);
 
   public List<ItemTo> listItemsOfGroupOrder(Long groupOrderId);
+
+  public void deleteItem(Long itemId);
 
 }
